--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Stats preview card component</title>
   </head>
   <body>
@@ -19,17 +24,19 @@
           Discover the benefits of data analytics and make better decisions
           regarding revenue, customer experience, and overall efficiency.
         </h2>
-        <div class="text-10k">
-          <p>10k+</p>
-          <span>COMPANIES</span>
-        </div>
-        <div class="text-314">
-          <p>314</p>
-          <span>TEMPLATES</span>
-        </div>
-        <div class="text-12m">
-          <p>12M+</p>
-          <span>QUERIES</span>
+        <div class="statistics">
+          <div class="text-10k">
+            <p>10k+</p>
+            <span>COMPANIES</span>
+          </div>
+          <div class="text-314">
+            <p>314</p>
+            <span>TEMPLATES</span>
+          </div>
+          <div class="text-12m">
+            <p>12M+</p>
+            <span>QUERIES</span>
+          </div>
         </div>
       </section>
     </main>
